Agregado loading entre paginas

--- a/detalle-portafolio.html
+++ b/detalle-portafolio.html
@@ -10,9 +10,25 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 
 	<link rel="stylesheet" href="assets/css/bootstrap.css" />
+	<link rel="stylesheet" href="assets/css/custom-loading.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
 <body class="portafolio">
+	<div class='loader-container'>
+			<div class='loader'>
+					<div class='square'>
+							<img src="images/recuadro.png" style=" opacity: 0.8;" />
+
+					</div>
+					<div class='lines'>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+					</div>
+			</div>
+			<img src="images/logo.svg" id="loading-logo"/>
+	</div>
 	<div id="page-wrapper">
 		<!-- Main -->
 		<div id="main-wrapper">
