--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 
 	<link rel="stylesheet" href="assets/css/bootstrap.css" />
+	<link rel="stylesheet" href="assets/css/custom-loading.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
 <body class="homepage">
+
+	<div class='loader-container'>
+			<div class='loader'>
+					<div class='square'>
+							<img src="images/recuadro.png" style=" opacity: 0.8;" />
+
+					</div>
+					<div class='lines'>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+					</div>
+			</div>
+			<img src="images/logo.svg" id="loading-logo"/>
+	</div>
+
 	<div id="page-wrapper">
 
 		<!-- Header -->
@@ -59,25 +77,25 @@
 				<section id="banner">
 					<ul class="slider">
 						<li>
-							<div class="item" style="background-image: url(assets/css/images/IMG_6578.jpg);" ></div>
+							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_6578.jpg);" ></div>
 						</li>
 						<li>
-							<div class="item" style="background-image: url(assets/css/images/IMG_6837.jpg);" ></div>
+							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_6837.jpg);" ></div>
 						</li>
 						<li>
-							<div class="item" style="background-image: url(assets/css/images/IMG_8756.jpg);" ></div>
+							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_8756.jpg);" ></div>
 						</li>
 						<li>
-							<div class="item" style="background-image: url(assets/css/images/IMG_8409.jpg);" ></div>
+							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_8409.jpg);" ></div>
 						</li>
 						<li>
-							<div class="item" style="background-image: url(assets/css/images/039A0590.jpg);" ></div>
+							<div class="item preloadBG" style="background-image: url(assets/css/images/039A0590.jpg);" ></div>
 						</li>
 						<li>
-							<div class="item" style="background-image: url(assets/css/images/039A0554.jpg);" ></div>
+							<div class="item preloadBG" style="background-image: url(assets/css/images/039A0554.jpg);" ></div>
 						</li>
 						<li>
-							<div class="item" style="background-image: url(assets/css/images/IMG_1613.jpg);" ></div>
+							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_1613.jpg);" ></div>
 						</li>
 					</div>
 				</section>
@@ -114,7 +132,7 @@
 
 										<div class="col-lg-6">
 											<div class="twelve columns" style="padding:0px;">
-												<section style="background-image:url(assets/css/images/IMG_8756.jpg);" class="overlay p10">
+												<section style="background-image:url(assets/css/images/IMG_8756.jpg);" class="preloadBG overlay p10">
 													<a href="">
 														<div class="recuadro showhim">
 															<h3 class="info-prev">alberto y miguel</h3>
@@ -124,7 +142,7 @@
 											</div>
 										</div>
 										<div class="col-lg-6">
-											<section style="background-image:url(assets/css/images/IMG_6837.jpg);" class="overlay p10">
+											<section style="background-image:url(assets/css/images/IMG_6837.jpg);" class="preloadBG overlay p10">
 												<a href="">
 													<div class="recuadro showhim">
 														<h3 class="info-prev">alberto y miguel</h3>
@@ -137,7 +155,7 @@
 									<br>
 									<div class="row">
 										<div class="col-lg-6">
-											<section style="background-image:url(assets/css/images/039A0590.jpg);" class="overlay p10">
+											<section style="background-image:url(assets/css/images/039A0590.jpg);" class="preloadBG overlay p10">
 												<a href="">
 													<div class="recuadro showhim">
 														<h3 class="info-prev">alberto y miguel</h3>
@@ -147,7 +165,7 @@
 
 										</div>
 										<div class="col-lg-6">
-											<section style="background-image:url(assets/css/images/IMG_6578.jpg);" class="overlay p10">
+											<section style="background-image:url(assets/css/images/IMG_6578.jpg);" class="preloadBG overlay p10">
 												<a href="">
 													<div class="recuadro showhim">
 														<h3 class="info-prev">alberto y miguel</h3>
@@ -166,7 +184,7 @@
 									<div class="row">
 										<div class="col-lg-8">
 											<div class="col-lg-12">
-												<div class="sobre-mi">
+												<div class="sobre-mi preloadBG">
 												</div>
 											</div>
 										</div>
