--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 			<img src="images/logo.svg" id="loading-logo"/>
 	</div>
 
-	<div id="page-wrapper">
 
 		<!-- Header -->
 		<div id="header-wrapper">
@@ -219,7 +218,49 @@
 				</div>
 			</div>
 		</div>
+		<footer class="col-lg-12">
+			<div class="col-lg-3" style="font-size: 0.85em;">
+				<hr>
+				<div class="col-lg-4">
+					<p>
+						Panamá
+					</p>
+				</div>
+				<div class="col-lg-8">
+					<p>
+						+507 6329-3995
+					</p>
+				</div>
 
+				<div class="col-lg-4">
+					<p>
+						Venezuela
+					</p>
+				</div>
+				<div class="col-lg-8">
+					<p>
+						+58 (0412) 3542183
+					</p>
+					<p>
+						+58 (0412) 3513075
+					</p>
+				</div>
+			</div>
+			<div class="col-lg-6 text-center">
+				<img src="assets/css/images/logo-original.svg" alt="" />
+				<p>
+					Más que hacer fotografías...Componemos imágenes
+				</p>
+				<hr>
+				<a href="http://corsarioestudio.com" target="_blank">
+					<img src="assets/css/images/logo-corsario.svg" alt="" />
+				</a>
+			</div>
+			<div class="col-lg-3">
+
+			</div>
+		</footer>
+	
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.dropotron.min.js"></script>
