--- a/detalle-portafolio.html
+++ b/detalle-portafolio.html
@@ -111,7 +111,7 @@
 			</div>
 
 		</div>
-		<footer class="col-lg-12">
+		<footer id="main-footer" class="col-lg-12">
 			<div class="col-lg-3" style="font-size: 0.85em;">
 				<hr>
 				<div class="col-lg-4">
@@ -153,7 +153,7 @@
 
 			</div>
 		</footer>
-	
+
 	</div>
 
 	<!-- Scripts -->
