--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 				</div>
 			</div>
 		</div>
-		<footer class="col-lg-12">
+		<footer id="main-footer" class="col-lg-12">
 			<div class="col-lg-3" style="font-size: 0.85em;">
 				<hr>
 				<div class="col-lg-4">
@@ -260,7 +260,7 @@
 
 			</div>
 		</footer>
-	
+
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/jquery.dropotron.min.js"></script>
