Maquetacion Mobile de la pagina Index

--- a/detalle-portafolio.html
+++ b/detalle-portafolio.html
@@ -63,11 +63,11 @@
 				<h4>Lorenzo y Lorena . Paraiso terrenal 04/12/2016</h4>
 				<hr>
 				<div class="row">
-					<div class="col-lg-12 no-pad">
-						<div class="col-lg-12">
+					<div class="col-lg-12 col-md-12 no-pad">
+						<div class="col-lg-12 col-md-12">
 							<a href="#" class="image featured"><img src="assets/css/images/039A0590.jpg" alt="" /></a>
 						</div>
-						<div class="col-lg-12 text-justify">
+						<div class="col-lg-12 col-md-12 text-justify">
 							<br>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 								labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -75,31 +75,31 @@
 								 Duis aute irure dolor</p>
 						</div>
 
-						<div class="col-lg-12 text-center">
+						<div class="col-lg-12 col-md-12 text-center">
 							<br>
 							<img src="assets/css/images/header-underline.svg" alt="" />
 							<hr>
 						</div>
 
-						<div class="col-lg-6">
+						<div class="col-lg-6 col-md-6">
 							<a href="#" class="image featured"><img src="assets/css/images/039A0554.jpg" alt="" /></a>
 						</div>
 
-						<div class="col-lg-6">
+						<div class="col-lg-6 col-md-6">
 							<a href="#" class="image featured"><img src="assets/css/images/IMG_8409.jpg" alt="" /></a>
 						</div>
 
-						<div class="col-lg-12 text-center">
+						<div class="col-lg-12 col-md-12 text-center">
 							<br>
 							<img src="assets/css/images/header-underline.svg" alt="" />
 							<hr>
 						</div>
 
-						<div class="col-lg-9">
+						<div class="col-lg-9 col-md-9">
 							<a href="#" class="image featured"><img src="assets/css/images/IMG_1613.jpg" alt="" /></a>
 						</div>
 
-						<div class="col-lg-3 text-justify">
+						<div class="col-lg-3 col-md-3 text-justify">
 							<br>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 								 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -111,26 +111,26 @@
 			</div>
 
 		</div>
-		<footer id="main-footer" class="col-lg-12">
-			<div class="col-lg-3" style="font-size: 0.85em;">
+		<footer id="main-footer" class="col-lg-12 col-md-12">
+			<div class="col-lg-3 col-md-3" style="font-size: 0.85em;">
 				<hr>
 				<div class="col-lg-4">
-					<p>
+					<b>
 						Panamá
-					</p>
+					</b>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-md-12">
 					<p>
 						+507 6329-3995
 					</p>
 				</div>
 
 				<div class="col-lg-4">
-					<p>
+					<b>
 						Venezuela
-					</p>
+					</b>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-md-12">
 					<p>
 						+58 (0412) 3542183
 					</p>
@@ -139,7 +139,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-6 text-center">
+			<div class="col-lg-6 col-md-6 text-center">
 				<img src="assets/css/images/logo-original.svg" alt="" />
 				<p>
 					Más que hacer fotografías...Componemos imágenes
@@ -149,7 +149,7 @@
 					<img src="assets/css/images/logo-corsario.svg" alt="" />
 				</a>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-3">
 
 			</div>
 		</footer>
