--- a/index.html
+++ b/index.html
@@ -16,196 +16,234 @@
 <body class="homepage">
 
 	<div class='loader-container'>
-			<div class='loader'>
-					<div class='square'>
-							<img src="images/recuadro.png" style=" opacity: 0.8;" />
+		<div class='loader'>
+			<div class='square'>
+				<img src="images/recuadro.png" style=" opacity: 0.8;" />
 
-					</div>
-					<div class='lines'>
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-					</div>
 			</div>
-			<img src="images/logo.svg" id="loading-logo"/>
+			<div class='lines'>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+		<img src="images/logo.svg" id="loading-logo"/>
 	</div>
 
 
-		<!-- Header -->
-		<div id="header-wrapper">
-			<div id="header">
+	<!-- Header -->
+	<div id="header-wrapper">
+		<div id="header">
 
-				<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li class="current outline-container">
-							<a href="index.html">HOME</a>
-							<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
-								<rect class="outline" height="100%" width="100%" />
-							</svg>
-						</li>
-						<li class="outline-container">
-							<a href="#">SOBRE MI</a>
-							<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
-								<rect class="outline" height="100%" width="100%" />
-							</svg>
-						</li>
-						<li class="outline-container">
-							<a href="#">BLOG</a>
-							<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
-								<rect class="outline" height="100%" width="100%" />
-							</svg>
-						</li>
-						<li class="outline-container">
-							<a href="portafolio.html">PORTAFOLIO</a>
-							<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
-								<rect class="outline" height="100%" width="100%" />
-							</svg>
-						</li>
-						<li class="outline-container">
-							<a href="#">CONTACTO</a>
-							<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
-								<rect class="outline" height="100%" width="100%" />
-							</svg>
-						</li>
-					</ul>
-				</nav>
-
-				<!-- Banner -->
-				<section id="banner">
-					<ul class="slider">
-						<li>
-							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_6578.jpg);" ></div>
-						</li>
-						<li>
-							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_6837.jpg);" ></div>
-						</li>
-						<li>
-							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_8756.jpg);" ></div>
-						</li>
-						<li>
-							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_8409.jpg);" ></div>
-						</li>
-						<li>
-							<div class="item preloadBG" style="background-image: url(assets/css/images/039A0590.jpg);" ></div>
-						</li>
-						<li>
-							<div class="item preloadBG" style="background-image: url(assets/css/images/039A0554.jpg);" ></div>
-						</li>
-						<li>
-							<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_1613.jpg);" ></div>
-						</li>
-					</div>
-				</section>
-
-				<!-- Logo -->
-				<section id="logo">
-					<div class="outline-container">
-						<img src="assets/css/images/logo-white.svg" alt="logo-gustavo-taliz-fotografo-photographer"/>
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li class="current outline-container">
+						<a href="index.html">HOME</a>
 						<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
 							<rect class="outline" height="100%" width="100%" />
 						</svg>
+					</li>
+					<li class="outline-container">
+						<a href="#">SOBRE MI</a>
+						<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
+							<rect class="outline" height="100%" width="100%" />
+						</svg>
+					</li>
+					<li class="outline-container">
+						<a href="#">BLOG</a>
+						<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
+							<rect class="outline" height="100%" width="100%" />
+						</svg>
+					</li>
+					<li class="outline-container">
+						<a href="portafolio.html">PORTAFOLIO</a>
+						<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
+							<rect class="outline" height="100%" width="100%" />
+						</svg>
+					</li>
+					<li class="outline-container">
+						<a href="#">CONTACTO</a>
+						<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
+							<rect class="outline" height="100%" width="100%" />
+						</svg>
+					</li>
+				</ul>
+			</nav>
 
-					</div>
-				</section>
-
-				<!-- Recuadro -->
-				<section id="recuadro" class="recuadro-camara-grande">
-				</section>
+			<!-- Nav Mobile-->
+			<nav id="navMobile">
+				<div class="logo">
+					<img src="assets/css/images/logo-original.svg" alt="" />
+				</div>
+				<div class="btn-menu">
+					<svg version="1.1" id="camera-focus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					width="35px" height="35px" viewBox="0 0 35 35" enable-background="new 0 0 35 35" xml:space="preserve">
+					<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="18.723,7.076
+					27.913,7.076 27.913,16.267 "/>
+					<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="16.278,7.076
+					7.087,7.076 7.087,16.267 "/>
+					<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="7.087,18.732
+					7.087,27.924 16.278,27.924 "/>
+					<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="18.723,27.924
+					27.913,27.924 27.913,18.732 "/>
+				</svg>
 			</div>
-		</div>
+			<div class="links">
+				<ul>
+					<li>
+						<a href="index.html"><h3>HOME</h3></a>
+					</li>
+					<li>
+						<a href="#"><h3>SOBRE MI</h3></a>
+					</li>
+					<li>
+						<a href="#"><h3>BLOG</h3></a>
+					</li>
+					<li>
+						<a href="portafolio.html"><h3>PORTAFOLIO</h3></a>
+					</li>
+					<li>
+						<a href="#"><h3>CONTACTO</h3></a>
+					</li>
+					<li>
+						<div class="btn-menu">
+							<img src="assets/css/images/red-x.svg" alt="" />
+						</div>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-		<!-- Main -->
-		<div id="main-wrapper">
-			<div class="container">
+		<!-- Banner -->
+		<section id="banner">
+			<ul class="slider">
+				<li>
+					<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_6578.jpg);" ></div>
+				</li>
+				<li>
+					<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_6837.jpg);" ></div>
+				</li>
+				<li>
+					<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_8756.jpg);" ></div>
+				</li>
+				<li>
+					<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_8409.jpg);" ></div>
+				</li>
+				<li>
+					<div class="item preloadBG" style="background-image: url(assets/css/images/039A0590.jpg);" ></div>
+				</li>
+				<li>
+					<div class="item preloadBG" style="background-image: url(assets/css/images/039A0554.jpg);" ></div>
+				</li>
+				<li>
+					<div class="item preloadBG" style="background-image: url(assets/css/images/IMG_1613.jpg);" ></div>
+				</li>
+			</div>
+		</section>
+
+		<!-- Logo -->
+		<section id="logo">
+			<div class="outline-container">
+				<img src="assets/css/images/logo-white.svg" alt="logo-gustavo-taliz-fotografo-photographer"/>
+				<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
+					<rect class="outline" height="100%" width="100%" />
+				</svg>
+
+			</div>
+		</section>
+
+		<!-- Recuadro -->
+		<section id="recuadro" class="big-corner-border">
+		</section>
+	</div>
+</div>
+
+<!-- Main -->
+<div id="main-wrapper">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12">
+
 				<div class="row">
-					<div class="col-lg-12">
+					<div class="col-lg-6 col-md-6 col-sm-12 text-center">
+						<h3>Eventos recientes</h3>
+						<img src="assets/css/images/header-underline.svg" alt="" />
+						<div class="corner-border events">
+							<div class="row">
 
-						<div class="row">
-							<div class="col-lg-6 text-center">
-								<h3>Eventos recientes</h3>
-								<img src="assets/css/images/header-underline.svg" alt="" />
-								<div class="recuadro-camara">
-									<div class="row">
-
-										<div class="col-lg-6">
-											<div class="twelve columns" style="padding:0px;">
-												<section style="background-image:url(assets/css/images/IMG_8756.jpg);" class="preloadBG overlay p10">
-													<a href="">
-														<div class="recuadro showhim">
-															<h3 class="info-prev">alberto y miguel</h3>
-														</div>
-													</a>
-												</section>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pad-15">
+									<section style="background-image:url(assets/css/images/IMG_8756.jpg);" class="preloadBG event overlay p10">
+										<a href="">
+											<div class="recuadro showhim">
+												<h3 class="info-prev">alberto y miguel</h3>
 											</div>
-										</div>
-										<div class="col-lg-6">
-											<section style="background-image:url(assets/css/images/IMG_6837.jpg);" class="preloadBG overlay p10">
-												<a href="">
-													<div class="recuadro showhim">
-														<h3 class="info-prev">alberto y miguel</h3>
-													</div>
-												</a>
-											</section>
-
-										</div>
-									</div>
-									<br>
-									<div class="row">
-										<div class="col-lg-6">
-											<section style="background-image:url(assets/css/images/039A0590.jpg);" class="preloadBG overlay p10">
-												<a href="">
-													<div class="recuadro showhim">
-														<h3 class="info-prev">alberto y miguel</h3>
-													</div>
-												</a>
-											</section>
-
-										</div>
-										<div class="col-lg-6">
-											<section style="background-image:url(assets/css/images/IMG_6578.jpg);" class="preloadBG overlay p10">
-												<a href="">
-													<div class="recuadro showhim">
-														<h3 class="info-prev">alberto y miguel</h3>
-													</div>
-												</a>
-											</section>
-
-										</div>
-
-									</div>
+										</a>
+									</section>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pad-15">
+									<section style="background-image:url(assets/css/images/IMG_8756.jpg);" class="preloadBG event overlay p10">
+										<a href="">
+											<div class="recuadro showhim">
+												<h3 class="info-prev">alberto y miguel</h3>
+											</div>
+										</a>
+									</section>
 								</div>
 							</div>
-
-							<div class="col-lg-6">
-								<div class="recuadro-medio-camara mg-top-60">
-									<div class="row">
-										<div class="col-lg-8">
-											<div class="col-lg-12">
-												<div class="sobre-mi preloadBG">
-												</div>
+							<div class="row">
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pad-15">
+									<section style="background-image:url(assets/css/images/IMG_8756.jpg);" class="preloadBG event overlay p10">
+										<a href="">
+											<div class="recuadro showhim">
+												<h3 class="info-prev">alberto y miguel</h3>
 											</div>
+										</a>
+									</section>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pad-15">
+									<section style="background-image:url(assets/css/images/IMG_8756.jpg);" class="preloadBG event overlay p10">
+										<a href="">
+											<div class="recuadro showhim">
+												<h3 class="info-prev">alberto y miguel</h3>
+											</div>
+										</a>
+									</section>
+								</div>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-6 col-sm-12 about-me">
+						<div class="half-corner-border mg-top-60">
+							<div class="row">
+								<div class="col-sm-7 no-pad">
+									<div class="col-lg-12 col-md-12 pad-15">
+										<div class="sobre-mi preloadBG">
 										</div>
-										<div class="col-lg-4 no-pad">
-											<div class="col-lg-12 text-justify">
-												<div class="col-lg-12 pink-container">
-												<p>Más que hacer
-													fotografías
-													Componemos
-													imágenes<p>
+									</div>
+								</div>
+								<div class="col-sm-5 no-pad">
+									<div class="col-lg-12 col-md-12 text-justify pad-15">
+										<div class="col-lg-12 col-md-12 pink-container">
+											<p class="pad-15">Más que hacer
+												fotografías
+												Componemos
+												imágenes<p>
 
 												</div>
 											</div>
-											<div class="col-lg-12 text-justify">
+											<div class="col-lg-12 col-md-12 text-justify">
 												<br>
 												<p>
 													Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 													Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-													 nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-													 reprehenderit in voluptate vesequat. Duis aute irure dolor in reprehenderit
-													 in voluptate ve
+													nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+													reprehenderit in voluptate vesequat. Duis aute irure dolor in reprehenderit
+													in voluptate ve
 												</p>
 											</div>
 										</div>
@@ -214,30 +252,72 @@
 
 							</div>
 						</div>
+						<hr>
+						<div class="row">
+							<div class="col-xs-12">
+								<div class="col-xs-12 text-center">
+									<h3>Descubre esa fecha especial</h3>
+									<img src="assets/css/images/header-underline.svg" alt="" />
+									<hr>
+								</div>
+								<div class="col-xs-12 rectangular-corner-border no-pad">
+									<div class="row">
+
+										<div class="col-sm-4 col-xs-12">
+											<div class="card">
+												<img class="card-img-top" src="assets/css/images/039A0590.jpg" alt="Card image cap">
+												<div class="card-block text-center">
+													<h4 class="card-title">Bodas</h4>
+													<img src="assets/css/images/header-underline.svg" alt="" />
+												</div>
+											</div>
+										</div>
+										<div class="col-sm-4 col-xs-12">
+											<div class="card">
+												<img class="card-img-top" src="assets/css/images/039A0590.jpg" alt="Card image cap">
+												<div class="card-block text-center">
+													<h4 class="card-title">Infantiles</h4>
+													<img src="assets/css/images/header-underline.svg" alt="" />
+												</div>
+											</div>
+										</div>
+										<div class="col-sm-4 col-xs-12">
+											<div class="card">
+												<img class="card-img-top" src="assets/css/images/039A0590.jpg" alt="Card image cap">
+												<div class="card-block text-center">
+													<h4 class="card-title">Embarazos</h4>
+													<img src="assets/css/images/header-underline.svg" alt="" />
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<footer id="main-footer" class="col-lg-12">
-			<div class="col-lg-3" style="font-size: 0.85em;">
+		<footer id="main-footer" class="col-lg-12 col-md-12">
+			<div class="col-sm-3" style="font-size: 0.85em;">
 				<hr>
-				<div class="col-lg-4">
-					<p>
+				<div class="col-lg-4 col-md-4">
+					<b>
 						Panamá
-					</p>
+					</b>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-md-12">
 					<p>
 						+507 6329-3995
 					</p>
 				</div>
 
-				<div class="col-lg-4">
-					<p>
+				<div class="col-lg-4 col-md-4">
+					<b>
 						Venezuela
-					</p>
+					</b>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-md-12">
 					<p>
 						+58 (0412) 3542183
 					</p>
@@ -246,7 +326,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-6 text-center">
+			<div class="col-sm-6 text-center">
 				<img src="assets/css/images/logo-original.svg" alt="" />
 				<p>
 					Más que hacer fotografías...Componemos imágenes
@@ -256,7 +336,7 @@
 					<img src="assets/css/images/logo-corsario.svg" alt="" />
 				</a>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-sm-3">
 
 			</div>
 		</footer>
