--- a/portafolio.html
+++ b/portafolio.html
@@ -64,11 +64,11 @@
 				<img src="assets/css/images/header-underline.svg" alt="" />
 				<hr>
 				<div class="row">
-					<div class="col-lg-12 portfolio-item no-pad">
-							<div class="col-lg-6 no-pad">
+					<div class="col-lg-12 col-md-12 portfolio-item no-pad">
+							<div class="col-lg-6 col-md-6 no-pad">
 								<a href="#" class="image featured"><img src="assets/css/images/IMG_6578.jpg" alt="" /></a>
 							</div>
-							<div class="col-lg-6 desc">
+							<div class="col-lg-6 col-md-6 desc">
 								<header>
 									<h3>Ipsum feugiat et dolor</h3>
 								</header>
@@ -79,8 +79,8 @@
 							</div>
 					</div>
 
-					<div class="col-lg-12 portfolio-item no-pad">
-							<div class="col-lg-6 desc">
+					<div class="col-lg-12 col-md-12 portfolio-item no-pad">
+							<div class="col-lg-6 col-md-6 desc">
 								<header>
 									<h3>Ipsum feugiat et dolor</h3>
 								</header>
@@ -89,7 +89,7 @@
 									<a href="detalle-portafolio.html" class="ghost-button">VER FOTOS</a>
 								</footer>
 							</div>
-							<div class="col-lg-6 no-pad">
+							<div class="col-lg-6 col-md-6 no-pad">
 								<a href="#" class="image featured"><img src="assets/css/images/039A0590.jpg" alt="" /></a>
 							</div>
 					</div>
@@ -97,26 +97,26 @@
 			</div>
 
 		</div>
-		<footer id="main-footer" class="col-lg-12">
-			<div class="col-lg-3" style="font-size: 0.85em;">
+		<footer id="main-footer" class="col-lg-12 col-md-12">
+			<div class="col-lg-3 col-md-3" style="font-size: 0.85em;">
 				<hr>
 				<div class="col-lg-4">
 					<p>
 						Panamá
 					</p>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-md-12">
 					<p>
 						+507 6329-3995
 					</p>
 				</div>
 
 				<div class="col-lg-4">
-					<p>
+					<b>
 						Venezuela
-					</p>
+					</b>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 col-md-12">
 					<p>
 						+58 (0412) 3542183
 					</p>
@@ -125,17 +125,17 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-lg-6 text-center">
+			<div class="col-lg-6 col-md-6 text-center">
 				<img src="assets/css/images/logo-original.svg" alt="" />
-				<p>
+				<b>
 					Más que hacer fotografías...Componemos imágenes
-				</p>
+				</b>
 				<hr>
 				<a href="http://corsarioestudio.com" target="_blank">
 					<img src="assets/css/images/logo-corsario.svg" alt="" />
 				</a>
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-md-3">
 
 			</div>
 		</footer>
