Vistas mobile de Blog, Portafolio y Portafolio Detalle

--- a/detalle-portafolio.html
+++ b/detalle-portafolio.html
@@ -29,12 +29,55 @@
 			</div>
 			<img src="images/logo.svg" id="loading-logo"/>
 	</div>
+	<!-- Nav Mobile-->
+	<div id="navMobile">
+		<div class="logo">
+			<img src="assets/css/images/logo-original.svg" alt="" />
+		</div>
+		<div class="btn-menu">
+			<svg version="1.1" id="camera-focus" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			width="35px" height="35px" viewBox="0 0 35 35" enable-background="new 0 0 35 35" xml:space="preserve">
+			<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="18.723,7.076
+			27.913,7.076 27.913,16.267 "/>
+			<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="16.278,7.076
+			7.087,7.076 7.087,16.267 "/>
+			<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="7.087,18.732
+			7.087,27.924 16.278,27.924 "/>
+			<polyline fill-rule="evenodd" clip-rule="evenodd" fill="none" stroke="#40423D" stroke-miterlimit="10" points="18.723,27.924
+			27.913,27.924 27.913,18.732 "/>
+		</svg>
+	</div>
+	<div class="links text-center">
+		<ul>
+			<li>
+				<a href="index.html"><h3>HOME</h3></a>
+			</li>
+			<li>
+				<a href="#"><h3>SOBRE MI</h3></a>
+			</li>
+			<li>
+				<a href="blog.html"><h3>BLOG</h3></a>
+			</li>
+			<li>
+				<a href="portafolio.html"><h3>PORTAFOLIO</h3></a>
+			</li>
+			<li>
+				<a href="#"><h3>CONTACTO</h3></a>
+			</li>
+			<li>
+				<div class="btn-menu">
+					<img src="assets/css/images/red-x.svg" alt="" />
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
 	<div id="page-wrapper">
 		<!-- Main -->
 		<div id="main-wrapper">
 
 			<!-- Portfolio -->
-			<section>
+			<section class="hidden-xs">
 				<header class="major">
 					<h2>My Portfolio</h2>
 					<nav id="nav">
@@ -46,7 +89,7 @@
 								<a href="#">SOBRE MI</a>
 							</li>
 							<li>
-								<a href="#">BLOG</a>
+								<a href="blog.html">BLOG</a>
 							</li>
 							<li class="current">
 								<a href="portafolio.html">PORTAFOLIO</a>
@@ -81,11 +124,25 @@
 							<hr>
 						</div>
 
-						<div class="col-lg-6 col-md-6">
+						<div class="col-lg-12 col-md-12">
 							<a href="#" class="image featured"><img src="assets/css/images/039A0554.jpg" alt="" /></a>
 						</div>
 
-						<div class="col-lg-6 col-md-6">
+						<div class="col-lg-12 col-md-12 text-justify">
+							<br>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+								labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate vesequat.
+								 Duis aute irure dolor</p>
+						</div>
+
+						<div class="col-lg-12 col-md-12 text-center">
+							<br>
+							<img src="assets/css/images/header-underline.svg" alt="" />
+							<hr>
+						</div>
+
+						<div class="col-md-12">
 							<a href="#" class="image featured"><img src="assets/css/images/IMG_8409.jpg" alt="" /></a>
 						</div>
 
@@ -95,11 +152,11 @@
 							<hr>
 						</div>
 
-						<div class="col-lg-9 col-md-9">
+						<div class="col-lg-12">
 							<a href="#" class="image featured"><img src="assets/css/images/IMG_1613.jpg" alt="" /></a>
 						</div>
 
-						<div class="col-lg-3 col-md-3 text-justify">
+						<div class="col-md-12 text-justify">
 							<br>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 								 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
