--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						</svg>
 					</li>
 					<li class="outline-container">
-						<a href="#">BLOG</a>
+						<a href="blog.html">BLOG</a>
 						<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
 							<rect class="outline" height="100%" width="100%" />
 						</svg>
@@ -98,8 +98,8 @@
 					<li>
 						<a href="#"><h3>SOBRE MI</h3></a>
 					</li>
-					<li>
-						<a href="#"><h3>BLOG</h3></a>
+					<li>}
+						<a href="blog.html"><h3>BLOG</h3></a>
 					</li>
 					<li>
 						<a href="portafolio.html"><h3>PORTAFOLIO</h3></a>
@@ -263,7 +263,7 @@
 								<div class="col-xs-12 rectangular-corner-border no-pad">
 									<div class="row">
 
-										<div class="col-sm-4 col-xs-12">
+										<div class="col-sm-4  col-sm-offset-0 col-xs-offset-1 col-xs-10">
 											<div class="card">
 												<img class="card-img-top" src="assets/css/images/039A0590.jpg" alt="Card image cap">
 												<div class="card-block text-center">
@@ -272,7 +272,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-sm-4 col-xs-12">
+										<div class="col-sm-4  col-sm-offset-0 col-xs-offset-1 col-xs-10">
 											<div class="card">
 												<img class="card-img-top" src="assets/css/images/039A0590.jpg" alt="Card image cap">
 												<div class="card-block text-center">
@@ -281,7 +281,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-sm-4 col-xs-12">
+										<div class="col-sm-4  col-sm-offset-0 col-xs-offset-1 col-xs-10">
 											<div class="card">
 												<img class="card-img-top" src="assets/css/images/039A0590.jpg" alt="Card image cap">
 												<div class="card-block text-center">
@@ -299,7 +299,12 @@
 			</div>
 		</div>
 		<footer id="main-footer" class="col-lg-12 col-md-12">
-			<div class="col-sm-3" style="font-size: 0.85em;">
+			<div class="col-xs-12 hidden-sm text-center">
+				<p>
+					Más que hacer fotografías...Componemos imágenes
+				</p>
+			</div>
+			<div class="col-sm-3 col-xs-6 no-pad" style="font-size: 0.85em;">
 				<hr>
 				<div class="col-lg-4 col-md-4">
 					<b>
@@ -326,7 +331,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-sm-6 text-center">
+			<div class="col-sm-6 text-center hidden-xs">
 				<img src="assets/css/images/logo-original.svg" alt="" />
 				<p>
 					Más que hacer fotografías...Componemos imágenes
@@ -336,8 +341,17 @@
 					<img src="assets/css/images/logo-corsario.svg" alt="" />
 				</a>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-3 hidden-xs">
 
+			</div>
+			<div class="col-xs-6 text-right hidden-sm no-pad">
+				<p>
+					Redes sociales
+				</p>
+				<hr>
+				<a href="http://corsarioestudio.com" target="_blank">
+					<img src="assets/css/images/logo-corsario.svg" alt="" />
+				</a>
 			</div>
 		</footer>
 
