--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
 			</header>
 		</section>
 
-		<div class="container text-center no-pad">
+		<div class="container text-center">
 			<div class="row">
 
 				<div class="col-sm-7 col-sm-offset-5 col-xs-10 col-xs-offset-1 no-pad">
