--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@
 				<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
 					<rect class="outline" height="100%" width="100%" />
 				</svg>
-
+			</div>
+			<div class="scroll-downs">
+				<div class="mousey">
+					<div class="scroller"></div>
+				</div>
 			</div>
 		</section>
 
