Fix 4 08-07-16 Fix de tamaño de imagen en blog

--- a/index.html
+++ b/index.html
@@ -151,11 +151,7 @@
 					<rect class="outline" height="100%" width="100%" />
 				</svg>
 			</div>
-			<div class="scroll-downs">
-				<div class="mousey">
-					<div class="scroller"></div>
-				</div>
-			</div>
+			<div class="scroll-down"></div>
 		</section>
 
 		<!-- Recuadro -->
