Arreglados detalles y añadidos iconos sociales

--- a/detalle-portafolio.html
+++ b/detalle-portafolio.html
@@ -83,7 +83,7 @@
 					<nav id="nav">
 						<ul>
 							<li>
-								<a href="index.html">HOME</a>
+								<a href="index.html">INICIO</a>
 							</li>
 							<li>
 								<a href="#">SOBRE MI</a>
@@ -91,7 +91,7 @@
 							<li>
 								<a href="blog.html">BLOG</a>
 							</li>
-							<li class="current">
+							<li>
 								<a href="portafolio.html">PORTAFOLIO</a>
 							</li>
 							<li>
@@ -189,6 +189,9 @@
 				</div>
 				<div class="col-lg-8 col-md-12">
 					<p>
+						+58 (0412) 2165133
+					</p>
+					<p>
 						+58 (0412) 3542183
 					</p>
 					<p>
@@ -206,8 +209,31 @@
 					<img src="assets/css/images/logo-corsario.svg" alt="" />
 				</a>
 			</div>
-			<div class="col-lg-3 col-md-3">
-
+			<div class="col-sm-3 hidden-xs">
+				<hr>
+				<div class="icons center-block hidden-xs">
+					<span class="fa fa-facebook"></span>
+					<span class="fa fa-twitter"></span>
+					<span class="fa fa-youtube-play"></span>
+					<span class="fa fa-instagram"></span>
+					<span class="fa fa-vimeo"></span>
+					<span class="fa fa-google-plus"></span>
+				</div>
+			</div>
+			<div class="col-xs-6 text-right hidden-sm no-pad">
+				<hr>
+				<div class="icons center-block">
+					<span class="fa fa-facebook"></span>
+					<span class="fa fa-twitter"></span>
+					<span class="fa fa-youtube-play"></span>
+					<span class="fa fa-instagram"></span>
+					<span class="fa fa-vimeo"></span>
+					<span class="fa fa-google-plus"></span>
+				</div>
+				<hr>
+				<a href="http://corsarioestudio.com" target="_blank">
+					<img src="assets/css/images/logo-corsario.svg" alt="" />
+				</a>
 			</div>
 		</footer>
 
