--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
 
 	<!-- Header -->
 	<div id="header-wrapper">
+
+		<div class="icons center-block hidden-xs">
+			<span class="fa fa-facebook"></span>
+			<span class="fa fa-twitter"></span>
+			<span class="fa fa-youtube-play"></span>
+			<span class="fa fa-instagram"></span>
+			<span class="fa fa-vimeo"></span>
+			<span class="fa fa-google-plus"></span>
+		</div>
+
 		<div id="header">
 
 			<!-- Nav -->
@@ -93,7 +103,7 @@
 			<div class="links">
 				<ul>
 					<li>
-						<a href="index.html"><h3>HOME</h3></a>
+						<a href="index.html"><h3>INICIO</h3></a>
 					</li>
 					<li>
 						<a href="#"><h3>SOBRE MI</h3></a>
@@ -324,6 +334,9 @@
 				</div>
 				<div class="col-lg-8 col-md-12">
 					<p>
+						+58 (0412) 2165133
+					</p>
+					<p>
 						+58 (0412) 3542183
 					</p>
 					<p>
@@ -342,12 +355,26 @@
 				</a>
 			</div>
 			<div class="col-sm-3 hidden-xs">
-
+				<hr>
+				<div class="icons center-block hidden-xs">
+					<span class="fa fa-facebook"></span>
+					<span class="fa fa-twitter"></span>
+					<span class="fa fa-youtube-play"></span>
+					<span class="fa fa-instagram"></span>
+					<span class="fa fa-vimeo"></span>
+					<span class="fa fa-google-plus"></span>
+				</div>
 			</div>
 			<div class="col-xs-6 text-right hidden-sm no-pad">
-				<p>
-					Redes sociales
-				</p>
+				<hr>
+				<div class="icons center-block">
+					<span class="fa fa-facebook"></span>
+					<span class="fa fa-twitter"></span>
+					<span class="fa fa-youtube-play"></span>
+					<span class="fa fa-instagram"></span>
+					<span class="fa fa-vimeo"></span>
+					<span class="fa fa-google-plus"></span>
+				</div>
 				<hr>
 				<a href="http://corsarioestudio.com" target="_blank">
 					<img src="assets/css/images/logo-corsario.svg" alt="" />
