Fixes de diseño y cambiada imagen de loading

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class='loader-container'>
 		<div class='loader'>
 			<div class='square'>
-				<img src="images/recuadro.png" style=" opacity: 0.8;" />
+				<img src="images/recuadro.svg" style=" opacity: 0.8;" />
 
 			</div>
 			<div class='lines'>
