--- a/loading.html
+++ b/loading.html
@@ -12,7 +12,7 @@
     <div class='content'>
         <div class='loader'>
             <div class='square'>
-                <img src="img/recuadro.png" style=" opacity: 0.8;" />
+                <img src="img/recuadro.svg" style=" opacity: 0.8;" />
 
             </div>
             <div class='lines'>
