--- a/portafolio.html
+++ b/portafolio.html
@@ -103,7 +103,7 @@
 		</section>
 
 		<div class="container text-center">
-			<div class="row">
+			<div class="row categorias">
 
 				<div class="col-sm-4 col-sm-offset-0 col-xs-offset-1 col-xs-10 highlight">
 					<a href="detalle-portafolio.html" class="button">BODAS</a>
