Fixes de iconos, texto placeholder y textp de busqueda

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
 				<nav id="nav">
 					<ul>
 						<li>
-							<a href="index.html">HOME</a>
+							<a href="index.html">INICIO</a>
 						</li>
 						<li>
 							<a href="#">SOBRE MI</a>
@@ -107,7 +107,7 @@
 
 				<div class="col-sm-7 col-sm-offset-5 col-xs-10 col-xs-offset-1">
 					<div class="col-md-3 col-md-offset-1 col-xs-4 col-xs-offset-0">
-						<h3>Proyectos</h3>
+						<h3>Busqueda</h3>
 					</div>
 					<div class="col-sm-4 col-xs-4">
 						<br>
@@ -137,7 +137,7 @@
 					<div class="horizontal-card">
 						<div class="card-img" style="background-image: url(assets/css/images/039A0590.jpg);"></div>
 						<div class="card-block text-justify">
-							<h3 class="card-title">Bodas</h3>
+							<h3 class="card-title">Andres y Adriana</h3>
 							<h5 class="date">16/07/2016</h5>
 							<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit
 								adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
@@ -151,7 +151,7 @@
 						<div class="horizontal-card">
 							<div class="card-img" style="background-image: url(assets/css/images/039A0590.jpg);"></div>
 							<div class="card-block text-justify">
-								<h3 class="card-title">Bodas</h3>
+								<h3 class="card-title">Maria y Jose</h3>
 								<h5 class="date">16/07/2016</h5>
 								<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit
 									adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
