--- a/detalle-portafolio.html
+++ b/detalle-portafolio.html
@@ -50,7 +50,7 @@
 	<div class="links text-center">
 		<ul>
 			<li>
-				<a href="index.html"><h3>HOME</h3></a>
+				<a href="index.html"><h3>INICIO</h3></a>
 			</li>
 			<li>
 				<a href="#"><h3>SOBRE MI</h3></a>
