--- a/portafolio.html
+++ b/portafolio.html
@@ -50,7 +50,7 @@
 	<div class="links text-center">
 		<ul>
 			<li>
-				<a href="index.html"><h3>HOME</h3></a>
+				<a href="index.html"><h3>INICIO</h3></a>
 			</li>
 			<li>
 				<a href="#"><h3>SOBRE MI</h3></a>
@@ -58,7 +58,7 @@
 			<li>
 				<a href="blog.html"><h3>BLOG</h3></a>
 			</li>
-			<li>
+			<li class="current">
 				<a href="portafolio.html"><h3>PORTAFOLIO</h3></a>
 			</li>
 			<li>
@@ -122,7 +122,7 @@
 					<div class="horizontal-card">
 						<img class="card-img" src="assets/css/images/039A0590.jpg" alt="Card image cap">
 						<div class="card-block text-justify">
-							<h3 class="card-title">Bodas</h3>
+							<h3 class="card-title">Boda de Julio y Petra</h3>
 							<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit
 								adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 								<footer class="highlight text-center">
@@ -137,7 +137,7 @@
 						<div class="horizontal-card right">
 							<img class="card-img" src="assets/css/images/039A0590.jpg" alt="Card image cap">
 							<div class="card-block text-justify">
-								<h3 class="card-title">Infantiles</h3>
+								<h3 class="card-title">Nacimiento de Jesus</h3>
 								<p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit
 									adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
 									<footer class="highlight text-center">
