--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<nav id="nav">
 				<ul>
 					<li class="current outline-container">
-						<a href="index.html">HOME</a>
+						<a href="index.html">INICIO</a>
 						<svg height="100%" width="100%" xmlns="http://www.w3.org/2000/svg">
 							<rect class="outline" height="100%" width="100%" />
 						</svg>
